Added new font and changed some CSS

--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -1,22 +1,5 @@
 ---
-const stats = [
- {
-  name: 'Years',
-  value: '9',
- },
- {
-  name: 'Something else',
-  value: '12',
- },
- {
-  name: 'Projects',
-  value: '5',
- },
- {
-  name: 'Blablabla',
-  value: '9',
- },
-];
+
 ---
 
 <section class="py-6 sm:py-6">
@@ -39,30 +22,11 @@ const stats = [
     quality of life.
    </p>
    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
-    I joined Hanlie Claasen Interiors in 2017 after being a stay-at-home mom to my two daughters,
-    and I will be ever grateful for this opportunity, as well as for Hanlie's wealth of knowledge
-    and experience that she has shared with me during this time.
-   </p>
-   <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
-    I believe we live in an environment where most consumers are resourceful and well-informed
-    (albeit overwhelmed!) thanks to social media and technology. I see my purpose as listening to a
-    client's ideas and then bringing to the table perspective and context, as well as a holistic
-    view, by applying sound design principles. True to its name, by reFlair-ing, my aim is to offer
-    guidance and services on the subject of flair - and I would like to once again add flair to your
-    home.
+    As I turned 40, it felt like a good time to face a new challenge: I joined Hanlie Claasen
+    Interiors in 2017 - after which ReFlair Interiors was born in 2020. Since then I have met
+    wonderful people, been inspired by the interior industry’s amazing offerings, learnt a lot and
+    worked on a variety of projects: each one stimulating and exciting in its own way.
    </p>
   </div>
-
-  <!-- Stats -->
-  <dl class="grid grid-cols-1 gap-6 px-6 sm:grid-cols-2">
-   {
-    stats.map((stat) => (
-     <div class=" rounded-3xl border border-primary-900/10 p-6 text-center dark:border-primary-300/10">
-      <dt class="text-base">{stat.name}</dt>
-      <dd class="text-3xl font-medium tracking-tight">{stat.value}</dd>
-     </div>
-    ))
-   }
-  </dl>
  </div>
 </section>
