--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -100,6 +100,15 @@ const { description, title } = Astro.props;
     font-style: italic;
     font-display: swap;
    }
+   @font-face {
+    font-family: 'Moontime';
+    src: url('/fonts/moontime-regular-webfont.woff2') format('woff2');
+    src: url('/fonts/moontime-regular-webfont.woff') format('woff');
+
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+   }
   </style>
 
   <script>
