--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -12,39 +12,40 @@ import Layout from '../layouts/Layout.astro';
    </div>
    <div>
     <p class="my-10 text-2xl">
-     An interior designer provides a range of services to help create functional and aesthetically
-     pleasing spaces. Some of the services they offer include:
+     Let me know if I could assist with any of the following services, in order to help create a
+     functional and aesthetically pleasing space:
     </p>
-    <ol>
+    <ul>
      <li>
-      Space planning: Determining the layout of furniture and decor to optimize the use of space.
+      <span class="font-moontime text-4xl">Space planning</span> : Determining the layout of
+      furniture and decor to optimize the use of space;
      </li>
      <li>
-      Color consultation: Selecting paint colors, fabrics, and finishes to create a cohesive look.
+      <span class="font-moontime text-4xl">Color consultation</span> : Selecting paint colors,
+      fabrics, and finishes to create a cohesive look;
      </li>
      <li>
-      Furniture selection: Choosing furniture pieces that fit the style and function of the space.
+      <span class="font-moontime text-4xl">Furniture selection</span>
+       : Choosing furniture pieces that fit the style and function of the space;
      </li>
      <li>
-      Lighting design: Planning the placement of lighting fixtures to enhance the ambiance of the
-      room.
+      <span class="font-moontime text-4xl">Lighting design</span>
+       : Planning the placement of lighting fixtures to enhance the ambiance of the room;
      </li>
      <li>
-      Custom design: Creating custom pieces such as built-in shelving, cabinetry, or furniture.
+      <span class="font-moontime text-4xl">Custom design</span>
+       : Creating custom pieces such as built-in shelving, cabinetry, or furniture;
      </li>
      <li>
-      Project management: Overseeing the implementation of the design plan, coordinating with
-      contractors and vendors.
+      <span class="font-moontime text-4xl">Project management</span>
+       : Overseeing the implementation of the design plan, coordinating with contractors and vendors
+      and
      </li>
      <li>
-      Styling and accessorizing: Adding finishing touches such as artwork, rugs, and decor items to
-      complete the look.
+      <span class="font-moontime text-4xl">Styling and accessorizing</span>
+       : Adding finishing touches such as artwork, rugs, and decor items to complete the look;
      </li>
-    </ol>
-    <p class="my-10 text-2xl">
-     Overall, an interior designer helps clients bring their vision for their space to life while
-     ensuring functionality and style are balanced.
-    </p>
+    </ul>
    </div>
   </div>
  </section>
@@ -65,7 +66,7 @@ import Layout from '../layouts/Layout.astro';
  }
 
  li {
-  font-size: 1.25rem /* 20px */;
+  font-size: 1.5rem /* 20px */;
   line-height: 2.125rem /* 34px */;
   margin-top: 1rem;
  }
