Fixed grammar error

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -38,8 +38,8 @@ import Layout from '../layouts/Layout.astro';
      </li>
      <li>
       <span class="font-moontime text-4xl">Project management</span>
-       : Overseeing the implementation of the design plan, coordinating with contractors and vendors
-      and
+       : Overseeing the implementation of the design plan, coordinating with contractors and
+      vendors; and
      </li>
      <li>
       <span class="font-moontime text-4xl">Styling and accessorizing</span>
