Changed logo colour and handwritten font family

--- a/src/components/home/FlairInjections.astro
+++ b/src/components/home/FlairInjections.astro
@@ -14,7 +14,7 @@
      The objectives of Flair Injection Consultations are:
     </p>
 
-    <ul class="list-inside list-disc text-lg sm:text-xl">
+    <ul class="list-inside list-disc text-xl">
      <li class="my-4 text-primary-950/70 dark:text-primary-200/70 sm:ms-8">
       To resonate with a client's taste and style. I take into consideration what makes them happy
       as I am of the opinion that our belongings restores our memories and connects us with others
