--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,19 +9,11 @@
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="sm:gap-22 grid items-center justify-center gap-12 sm:grid-cols-3 xl:gap-28">
    <div class="col-span-1 flex justify-center">
-    <img
-     class="w-48 sm:w-80"
-     :src="$store.theme.isDark ? 'assets/change-is-here-dark.png' : 'assets/change-is-here.png'"
-     alt="Change is here"
-    />
+    <img class="w-48 sm:w-80" src="assets/change-is-here-dark.png" alt="Change is here" />
    </div>
 
    <div class="col-span-1 mx-auto text-center">
-    <img
-     width="100"
-     :src="$store.theme.isDark ? '/assets/logo-inverted.webp' : '/assets/logo.webp'"
-     alt="Reflair logo"
-    />
+    <img width="100" src="/assets/logo-inverted.webp" alt="Reflair logo" />
    </div>
    <div class="col-span-1 flex flex-col items-center justify-center gap-2">
     <a class="text-center text-xl font-bold" href="/contact">Get in Touch</a>
