--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -109,6 +109,15 @@ const { description, title } = Astro.props;
     font-style: normal;
     font-display: swap;
    }
+   @font-face {
+    font-family: 'ArchitectDaugter';
+    src: url('/fonts/architectsdaughter-regular-webfont.woff2') format('woff2');
+    src: url('/fonts/architectsdaughter-regular-webfont.woff') format('woff');
+
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+   }
   </style>
 
   <script>
