--- a/src/components/about/Values.astro
+++ b/src/components/about/Values.astro
@@ -40,7 +40,7 @@ const values = [
       <div class="flex flex-col gap-12 rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10">
        <p class="text-md sm:text-lg">{value.ref}</p>
        <div class="flex flex-col gap-4">
-        <h3 class="font-moontime text-2xl sm:text-4xl">{value.name}</h3>
+        <h3 class="font-moontime text-xl sm:text-2xl">{value.name}</h3>
         <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-xl">
          {value.description}
         </p>
