--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -18,11 +18,15 @@
    <div class="col-span-1 flex flex-col items-center justify-center gap-2">
     <a class="text-center text-xl font-bold" href="/contact">Get in Touch</a>
     <p class="text-center text-lg">Menlo Park, Pretoria</p>
-    <p class="text-center text-lg">083 506 8001</p>
+    <p class="text-center text-lg"><a href="tel:0835068001">083 506 8001</a></p>
     <a class="text-center text-lg underline" href="mailto:mia@reflair.co.za">mia@reflair.co.za</a>
     <p class="text-center text-lg">Menlo Park, Pretoria</p>
     <!-- Instagram SVG -->
-    <a href="https://www.instagram.com/mia_reflairinteriors/">
+    <a
+     href="https://www.instagram.com/mia_reflairinteriors/"
+     target="_blank"
+     rel="noopener noreferrer"
+    >
      <svg
       class="flex-no-shrink h-12 w-12 fill-current"
       viewBox="0 0 256 256"
