Changed font for handwritten text

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -101,9 +101,9 @@ const { description, title } = Astro.props;
     font-display: swap;
    }
    @font-face {
-    font-family: 'Moontime';
-    src: url('/fonts/moontime-regular-webfont.woff2') format('woff2');
-    src: url('/fonts/moontime-regular-webfont.woff') format('woff');
+    font-family: 'Xarrovv';
+    src: url('/fonts/xarrovv.regular-webfont.woff2') format('woff2');
+    src: url('/fonts/xarrovv.regular-webfont.woff') format('woff');
 
     font-weight: normal;
     font-style: normal;
