--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -12,7 +12,7 @@ import Layout from '../layouts/Layout.astro';
    </div>
    <div>
     <p class="my-10 text-2xl">
-     Let me know if I could assist with any of the following services, in order to help create a
+     Let me know if I could assist with any of the following services, in order to help you create a
      functional and aesthetically pleasing space:
     </p>
     <ul>
@@ -22,7 +22,7 @@ import Layout from '../layouts/Layout.astro';
      </li>
      <li>
       <span class="font-moontime text-3xl">Color consultation</span> : Selecting paint colors,
-      fabrics, and finishes to create a cohesive look;
+      fabrics and finishes to create a cohesive look;
      </li>
      <li>
       <span class="font-moontime text-3xl">Furniture selection</span>
@@ -34,7 +34,7 @@ import Layout from '../layouts/Layout.astro';
      </li>
      <li>
       <span class="font-moontime text-3xl">Custom design</span>
-       : Creating custom pieces such as built-in shelving, cabinetry, or furniture;
+       : Creating custom pieces such as built-in shelving, cabinetry or furniture;
      </li>
      <li>
       <span class="font-moontime text-3xl">Project management</span>
@@ -43,7 +43,7 @@ import Layout from '../layouts/Layout.astro';
      </li>
      <li>
       <span class="font-moontime text-3xl">Styling and accessorizing</span>
-       : Adding finishing touches such as artwork, rugs, and decor items to complete the look;
+       : Adding finishing touches such as artwork, rugs and decor items to complete the look.
      </li>
     </ul>
    </div>
