Added slide pics animation to hero section

--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -1,12 +1,12 @@
-<section class="py-12">
+<section class="my-8 py-12">
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
-   <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-1">
-    <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">About Us</h2>
+   <div class="flex flex-col items-center justify-center gap-8 p-8 sm:gap-10 lg:col-span-1">
     <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      Thanks to social media and the internet, I believe most of us are influenced and educated to
      such an extent that we are able to make well-informed choices when it comes to furnishing our
-     spaces. Therefore the question, why consult an interior designer? I see my purpose as listening
+     spaces. Therefore the question, why consult an interior designer?
+     <!-- I see my purpose as listening
      to a client's needs and ideas and then aligning those plans with sound design principles - to
      arrive at a point where everyone is happy. I love working with what people already have, and by
      bringing to the table a little imagination and balancing it with perspective and context, an
@@ -14,7 +14,7 @@
      <span class="font-['FuturaBold']">re</span>Flair-ing my aim is to offer guidance and services <span
       class="font-['FuturaBold']">on the subject of</span
      > flair - and I would like to <span class="font-['FuturaBold']">once again</span> add flair to
-     your home.
+     your home. -->
     </p>
     <a
      href="/about"
@@ -24,11 +24,7 @@
     </a>
    </div>
    <div class="wrap flex lg:col-span-1">
-    <img
-     src="/assets/lappies.webp"
-     alt="flour theme fabrics stacked in a pile"
-     class="rounded-3xl"
-    />
+    <img src="/assets/lappies.webp" alt="flour theme fabrics stacked in a pile" />
    </div>
   </div>
  </div>
