--- a/src/components/home/MeetMia.astro
+++ b/src/components/home/MeetMia.astro
@@ -1,8 +1,8 @@
-<section class="py-12">
+<section class="bg-primary-400/10 py-12">
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
    <div class="wrap flex lg:col-span-1">
-    <img src="/assets/mia.jpg" alt="flour theme fabrics stacked in a pile" class="rounded-3xl" />
+    <img src="/assets/mia.jpg" alt="flour theme fabrics stacked in a pile" />
    </div>
    <div
     class="order-first flex flex-col items-start justify-center gap-12 sm:gap-10 lg:order-last lg:col-span-1"
