--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -2,51 +2,237 @@
 
 ---
 
-<section class="pb-6 sm:pb-8">
-  <div class="mx-auto w-full">
-    <div class="flex flex-col gap-16">
-      <div class="flex flex-col items-center justify-center">
-        <div class="flex flex-col items-center gap-8 sm:gap-10">
-          <div class="flex max-w-xl flex-col items-center gap-4 sm:gap-6">
-            <h1 class="text-4xl font-medium tracking-tight text-white sm:text-5xl lg:text-6xl">
-              The Art of Reflair
-            </h1>
-            <p class="text-md text-center text-white sm:text-xl">
-              Loads of inspiration to make any interior seem fresh and updated again.
-            </p>
-          </div>
+<div class="slides-container">
+ <picture class="slide-pic">
+  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-1-mobile.jpg" />
+  <source srcset="/assets/hero-slides/slide-1.jpg" />
+  <img src="/assets/hero-slides/slide-1.jpg" alt="slide-1" />
+ </picture>
+ <picture class="slide-pic">
+  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-2-mobile.jpg" />
+  <source srcset="/assets/hero-slides/slide-2.jpg" />
+  <img src="/assets/hero-slides/slide-2.jpg" alt="slide-2" />
+ </picture>
+ <picture class="slide-pic">
+  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-3-mobile.jpg" />
+  <source srcset="/assets/hero-slides/slide-3.jpg" />
+  <img src="/assets/hero-slides/slide-3.jpg" alt="slide-3" />
+ </picture>
+ <picture class="slide-pic">
+  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-4-mobile.jpg" />
+  <source srcset="/assets/hero-slides/slide-4.jpg" />
+  <img src="/assets/hero-slides/slide-4.jpg" alt="slide-4" />
+ </picture>
+ <picture class="slide-pic">
+  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-5-mobile.jpg" />
+  <source srcset="/assets/hero-slides/slide-5.jpg" />
+  <img src="/assets/hero-slides/slide-5.jpg" alt="slide-5" />
+ </picture>
+ <!-- <img src="/assets/hero-slides/slide-2.jpg" alt="slide-2" />
+ <img src="/assets/hero-slides/slide-3.jpg" alt="slide-3" />
+ <img src="/assets/hero-slides/slide-4.jpg" alt="slide-4" />
+ <img src="/assets/hero-slides/slide-5.jpg" alt="slide-5" /> -->
 
-          <a
-            href="/contact"
-            class="inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-5 py-3 text-base font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400"
-          >
-            Contact us
-          </a>
-        </div>
-      </div>
-    </div>
+ <div class="container">
+  <div class="title">
+   <h2>THE ART OF</h2>
+   <h1>REFLAIR</h1>
+   <div class="line-element"></div>
   </div>
-</section>
 
-<script>
-  window.addEventListener('scroll', setScrollVar);
-  window.addEventListener('resize', setScrollVar);
+  <span class="des text-md relative sm:text-xl">
+   Loads of inspiration to make any interior seem fresh and updated again</span
+  >
+  <a
+   href="/contact"
+   class="hero-button relative inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-8 py-4 text-base font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400"
+  >
+   Contact us
+  </a>
+ </div>
+</div>
 
-  function setScrollVar() {
-    const htmlElement = document.documentElement;
-    const percentOfScreenHeightScrolled = htmlElement.scrollTop / htmlElement.clientHeight;
-    console.log(Math.min(percentOfScreenHeightScrolled * 100, 100));
-    htmlElement.style.setProperty('--scroll', Math.min(percentOfScreenHeightScrolled * 100, 100));
+<style>
+ :root {
+  --animation-time: 2000ms;
+ }
+ .slides-container {
+  height: 70vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+
+ img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  animation: fade 15s infinite alternate;
+  animation-timing-function: cubic-bezier(0.57, 0.03, 0.36, 0.97);
+ }
+
+ .slide-pic:nth-of-type(5) img {
+  animation-delay: 0s;
+ }
+ .slide-pic:nth-of-type(4) img {
+  animation-delay: 3s;
+ }
+ .slide-pic:nth-of-type(3) img {
+  animation-delay: 6s;
+ }
+ .slide-pic:nth-of-type(2) img {
+  animation-delay: 9s;
+ }
+ .slide-pic:nth-of-type(1) img {
+  animation-delay: 12s;
+ }
+
+ @keyframes fade {
+  0% {
+   opacity: 1;
   }
+  20% {
+   opacity: 0;
+  }
+  40% {
+   opacity: 0;
+  }
+  60% {
+   opacity: 0;
+  }
+  80% {
+   opacity: 0;
+  }
+  100% {
+   opacity: 1;
+  }
+ }
 
-  setScrollVar();
+ .title {
+  z-index: 100;
+  position: relative;
+ }
+ .container {
+  overflow: hidden;
+  text-align: center;
+  color: white;
+  font-weight: 900;
+  font-family: FuturaBold;
+ }
 
-  // function checkScroll() {
-  //   const percentOfScreenHeightScrolled = htmlElement.scrollTop / htmlElement.clientHeight;
-  //   console.log(percentOfScreenHeightScrolled);
-  // }
+ .container h1 {
+  font-size: 72px;
+  margin: 0;
+  margin-bottom: 0.7rem;
+  line-height: 0.9;
+  animation: riflair-load 1s;
+ }
+ .container h2 {
+  font-size: 36px;
+  margin: 0;
 
-  // setInterval(() => checkScroll(), 1000);
-</script>
+  animation: the-art-of-load var(--animation-time);
+ }
 
-<style></style>
+ .line-element {
+  display: inline-block;
+  height: 4px;
+  width: 100px;
+  background-color: white;
+  margin-bottom: 0.5rem;
+  animation: line-element-load var(--animation-time);
+ }
+
+ @media screen and (max-width: 1036px) {
+  .container h1 {
+   font-size: 64px;
+  }
+  .container h2 {
+   font-size: 32px;
+  }
+ }
+
+ @media screen and (max-width: 480px) {
+  .container h1 {
+   font-size: 48px;
+   letter-spacing: 0.1em;
+   margin-bottom: 0.5rem;
+  }
+  .container h2 {
+   font-size: 28px;
+   margin-bottom: 0.2rem;
+  }
+  2 .line-element {
+   width: 70px;
+   background-color: white;
+   margin-bottom: 0.4rem;
+   animation: line-element-load var(--animation-time);
+  }
+ }
+
+ .des {
+  margin: 20px;
+  display: block;
+  text-shadow: 0 0 10px black;
+  animation: des-load var(--animation-time);
+  margin-bottom: 2rem;
+  animation-timing-function: ease-out;
+ }
+
+ .hero-button {
+  animation: button-load var(--animation-time);
+ }
+
+ @keyframes riflair-load {
+  0% {
+   opacity: 0;
+  }
+  100% {
+   opacity: 1;
+  }
+ }
+
+ @keyframes the-art-of-load {
+  0% {
+   transform: translatex(20%);
+   opacity: 0;
+  }
+  100% {
+   transform: translateY(0);
+   opacity: 1;
+  }
+ }
+
+ @keyframes button-load {
+  0% {
+   transform: scale(0);
+  }
+  100% {
+   transform: scale(1);
+  }
+ }
+ @keyframes des-load {
+  0% {
+   transform: translatex(100%);
+   opacity: 0;
+  }
+  100% {
+   transform: translateY(0);
+   opacity: 1;
+  }
+ }
+
+ @keyframes line-element-load {
+  0% {
+   transform: scale(0);
+  }
+  100% {
+   transform: scale(1);
+  }
+ }
+</style>
