--- a/src/components/home/MeetMia.astro
+++ b/src/components/home/MeetMia.astro
@@ -5,7 +5,7 @@
     <img src="/assets/mia.jpg" alt="flour theme fabrics stacked in a pile" />
    </div>
    <div
-    class="order-first flex flex-col items-start justify-center gap-12 sm:gap-10 lg:order-last lg:col-span-1"
+    class="order-first flex flex-col items-start justify-center gap-12 p-8 sm:gap-10 lg:order-last lg:col-span-1"
    >
     <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">Meet Mia</h2>
     <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
