--- a/src/components/home/FlairInjections.astro
+++ b/src/components/home/FlairInjections.astro
@@ -1,7 +1,7 @@
 <section class="py-12">
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
-   <div class="flex flex-col items-start gap-4 sm:gap-6 lg:col-span-1">
+   <div class="flex flex-col items-center justify-center gap-4 sm:gap-6 lg:col-span-1">
     <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">Flair Injections</h2>
     <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      These consultations provide practical information, honest recommendations and loads of
@@ -10,42 +10,12 @@
      however need high-quality photos from all angles, as well as measurements and/or building
      plans, in order for us to provide the best possible feedback.
     </p>
-    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
-     The objectives of Flair Injection Consultations are:
-    </p>
-
-    <ul class="list-inside list-disc text-xl">
-     <li class="my-8 text-primary-950/70 dark:text-primary-200/70 sm:ms-8">
-      To resonate with a client's taste and style. I take into consideration what makes them happy
-      as I am of the opinion that our belongings restores our memories and connects us with others
-      and with the past;
-     </li>
-     <li class="my-8 text-primary-950/70 dark:text-primary-200/70 sm:ms-8">
-      To move from a 'take-make-dispose' approach towards a 'recycle-repair-reuse' approach;
-     </li>
-     <li class="my-8 text-primary-950/70 dark:text-primary-200/70 sm:ms-8">
-      To move from a 'take-make-dispose' approach towards a 'recycle-repair-reuse' approach and in
-      the process utilise what is already available to the client.
-     </li>
-     <li class="my-8 text-primary-950/70 dark:text-primary-200/70 sm:ms-8">
-      To involve the client as little or as much as they prefer. Although reFlair Interiors offer an
-      entire turn-key solution, clients can opt only for the Flair Injection Consultation and thus
-      be empowered to undertake renovations by themselves.
-     </li>
-    </ul>
-    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
-     I would love to assist you to reFlair your home!
-    </p>
    </div>
    <div class="wrap flex lg:col-span-1">
     <picture>
      <source media="(max-width:1023px)" srcset="/assets/flair_injections.webp" />
      <source media="(min-width:1024px)" srcset="/assets/flair_injections_large.jpg" />
-     <img
-      src="/assets/flair_injections.webp"
-      alt="flour theme fabrics stacked in a pile"
-      class="rounded-3xl"
-     />
+     <img src="/assets/flair_injections.webp" alt="flour theme fabrics stacked in a pile" />
     </picture>
    </div>
   </div>
