--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -54,7 +54,7 @@ import Layout from '../layouts/Layout.astro';
 <style>
  .services-img {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-   url(../../public/assets/services-hero.jpg);
+   url(/assets/services-hero.jpg);
   height: 60vh;
   background-size: cover;
   background-attachment: fixed;
