--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import About from '../components/home/About.astro';
+// import About from '../components/home/About.astro';
 import Hero from '../components/home/Hero.astro';
-import Testimonials from '../components/home/Testimonials.astro';
+// import Testimonials from '../components/home/Testimonials.astro';
 import Layout from '../layouts/Layout.astro';
-import MeetMia from '../components/home/MeetMia.astro';
-import FlairInjections from '../components/home/FlairInjections.astro';
-import Projects from '../components/home/Projects.astro';
+// import MeetMia from '../components/home/MeetMia.astro';
+// import FlairInjections from '../components/home/FlairInjections.astro';
+// import Projects from '../components/home/Projects.astro';
 ---
 
 <Layout
@@ -13,11 +13,11 @@ import Projects from '../components/home/Projects.astro';
  title="Reflair interiors"
 >
  <Hero />
- <About />
- <MeetMia />
- <FlairInjections />
- <Projects />
- <Testimonials />
+ <!-- <About /> -->
+ <!-- <MeetMia /> -->
+ <!-- <FlairInjections /> -->
+ <!-- <Projects /> -->
+ <!-- <Testimonials /> -->
 </Layout>
 
 <style>
