--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -22,6 +22,11 @@ const links = [
  },
  {
   ref: '05',
+  name: 'Testimonials',
+  href: '/testimonials',
+ },
+ {
+  ref: '06',
   name: 'Contact',
   href: '/contact',
  },
@@ -50,7 +55,7 @@ const links = [
    <!-- Top Menu -->
 
    <div class="hidden sm:block">
-    <nav class="flex flex-auto sm:gap-8 md:gap-16 lg:gap-20 xl:gap-32">
+    <nav class="flex flex-auto sm:gap-4 md:gap-8 lg:gap-12 xl:gap-20">
      {
       links.map((link) => (
        <a
